# SearchEngine

./: CMakeLists.txt  Crawler.cpp  LinkQueue.cpp  LinkQueue.h  Makefile.mk  crawl.cpp  indexer.cpp  indexer.hpp  repo.hpp  repo_in_memory.cpp  repo_in_memory.hpp  server.cpp  urlQueue.h
.github/workflows/: c-cpp.yml
